# RTPA-core-tutorial

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.md  build_wheel.md  docker-compose-openpdc.yml  docker-compose.yml  setup.py  test_openpdc.py  tutorial.ipynb
benches/: parsing.rs
cli/: Cargo.toml
cli/src/: arrow_utils.rs  frame_buffer.rs  frame_parser.rs  main.rs  pdc_buffer_server.rs  pdc_server.rs
core/: Cargo.toml
core/benches/: accumulator_throughput.rs  arrow_latency.rs  utils.rs
core/src/: lib.rs  pdc_buffer.rs  utils.rs
core/src/accumulator/: manager.rs  sparse.rs
core/src/ieee_c37_118/: commands.rs  common.rs  config.rs  data_frame.rs  mod.rs  phasors.rs  random.rs  tests.rs  units.rs  utils.rs
core/tests/: pdc_buffer_test.rs
core/tests/accumulator/: arrow_alignment_tests.rs
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs  pdc_buffer_py.rs
src/: arrow_utils.rs  client.rs  errors.rs  frame_parser.rs  frames.rs  frames_2024.rs  handshake.rs  lib.rs  main.rs  mocks.rs  pdc_buffer_server.rs  pdc_client.rs  pdc_server.rs  phasor.rs  pmu_client.rs
tests/: frame_parser.rs  test_frame_buffer.rs  test_frame_parser.rs  test_pdc_client.rs  test_server.rs
