[workspace]

[package]
name = "pmu"
version = "0.1.0"
edition = "2021"


[dependencies]
arrow = { version = "53.2.0", features = ["ipc"] }
axum = "0.7.7"
bytes = "1.7.1"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.1"
tower-http = "0.6.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
reqwest = "0.12.8"
