[workspace]

[package]
name = "pmu"
version = "0.0.1"
edition = "2021"


[dependencies]
arrow = { version = "53.2.0", features = ["ipc"] }
axum = "0.7.7"
bytes = "1.7.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5.1"
tower-http = "0.6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
arrow = { version = "53.2.0", features = ["ipc"] }
