[workspace]
members = ["core", "cli", "py"]
resolver = "2"

[workspace.package]
authors = [
    "Micah Webb <micah.webb@nrel.gov>",
    "National Renewable Energy Laboratory (NREL)",
]
license = "BSD-3-Clause"
edition = "2021"

# Optional: Shared dependencies to ensure version consistency
[workspace.dependencies]
arrow = { version = "54.3.1" }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"

[workspace.metadata.maturin]
python-source = "py"
