[package]
name = "rtpa_core"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Core utilities for IEEE C37.118 frame parsing and conversion to Arrow, developed by Micah Webb at NREL"

[lib]
name = "rtpa_core"
path = "src/lib.rs"

[dependencies]
# Use workspace dependencies
arrow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rayon = "1.10.0"


[dev-dependencies]
criterion = "0.5.1"
rtpa_cli = { path = "../cli" }
tokio = "1.44.2"


[[bench]]
name = "arrow_latency"
harness = false

[[bench]]
name = "accumulator_throughput"
harness = false
