[package]
name = "rtpa"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "The Python of the RTPA-Core PDC Buffer, an in-memory arrow buffer for real-time data analytics of the IEEE C37.118 Phasor Data Concentrator (PDC), developed by Micah Webb at NREL"

[lib]
name = "rtpa"
crate-type = ["cdylib"]

[dependencies]
# Reference the core library
rtpa_core = { path = "../core" }

# Python-specific dependencies
arrow = { workspace = true, features = ["pyarrow"] }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }

# How we name the python package
[package.metadata.maturin]
name = "rtpa"
